--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,13 @@ body {
     text-wrap: balance;
   }
 }
+
+h2 {
+  font-size: 20px;
+  padding-top: 10px;
+}
+
+h1 {
+  font-size: 40px;
+  padding: 10px;
+}
