--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,15 @@ body {
   background-color: #E8EEF2;
   color: #0C583D
 }
+
+.gradient-text {
+  background: linear-gradient(
+    to right,
+    #3B8CCF,
+    #0A599A,
+    #3B8CCF,
+    #0A599A
+  );
+  background-clip: text;
+  background-size: 300% 300%
+}
